--- a/WavesAndOscillations/simulations/2.html
+++ b/WavesAndOscillations/simulations/2.html
@@ -83,12 +83,6 @@
             transform: scale(1.1);
         }
 
-        .control-group .value-display {
-            font-size: 1rem;
-            font-weight: bold;
-            color: #ffffff;
-            margin-top: 8px;
-        }
 
         /* Message box styling */
         #message-box {
@@ -120,20 +114,22 @@
     </style>
 </head>
 <body>
+     <div style="margin-top: 20px; margin-bottom: 20px;" id="home">
+        <a href="../../index.html" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-6 rounded-full transition-colors">Home</a>
+        <a href="../wavesAndOscillation.html" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full transition-colors">Back</a>
+    </div>
     <div id="scene-container">
         <canvas id="double-slit-canvas"></canvas>
     </div>
 
     <div id="controls">
         <div class="control-group">
-            <label for="wavelength-slider">Wavelength ($\lambda$)</label>
+            <label for="wavelength-slider">Wavelength (λ)</label>
             <input type="range" id="wavelength-slider" min="0.1" max="5.0" step="0.01" value="1.0">
-            <div class="value-display" id="wavelength-value">1.0 m</div>
         </div>
         <div class="control-group">
-            <label for="slit-distance-slider">Slit Distance ($d$)</label>
+            <label for="slit-distance-slider">Slit Distance (d)</label>
             <input type="range" id="slit-distance-slider" min="0.5" max="10.0" step="0.1" value="3.0">
-            <div class="value-display" id="slit-distance-value">3.0 m</div>
         </div>
     </div>
 
@@ -363,19 +359,15 @@
                 // --- Control Listeners ---
                 const wavelengthSlider = document.getElementById('wavelength-slider');
                 const slitDistanceSlider = document.getElementById('slit-distance-slider');
-                const wavelengthValueDisplay = document.getElementById('wavelength-value');
-                const slitDistanceValueDisplay = document.getElementById('slit-distance-value');
 
                 wavelengthSlider.oninput = function() {
                     wavelength = this.value;
                     interferenceMaterial.uniforms.wavelength.value = wavelength;
-                    wavelengthValueDisplay.innerText = `${wavelength} m`;
                 };
 
                 slitDistanceSlider.oninput = function() {
                     slitDistance = this.value;
                     interferenceMaterial.uniforms.slitDistance.value = slitDistance;
-                    slitDistanceValueDisplay.innerText = `${slitDistance} m`;
 
                     // Update slit positions to match the new distance
                     slit1.position.set(-slitDistance / 2, 0, slitZ);
