--- a/WavesAndOscillations/wavesAndOscillation.html
+++ b/WavesAndOscillations/wavesAndOscillation.html
@@ -64,7 +64,8 @@
 
 const names = [
   "Simple Pendulum",
-  "Young's Double Slit Experiment"
+  "Young's Double Slit Experiment",
+  "Double Pendulum"
 ]
 
 const myTable = document.getElementById("myTable");
