spring-mass-system

--- a/WavesAndOscillations/wavesAndOscillation.html
+++ b/WavesAndOscillations/wavesAndOscillation.html
@@ -65,7 +65,8 @@
 const names = [
   "Simple Pendulum",
   "Young's Double Slit Experiment",
-  "Double Pendulum"
+  "Double Pendulum",
+  "Spring Mass System"
 ]
 
 const myTable = document.getElementById("myTable");
