--- a/WavesAndOscillations/wavesAndOscillation.html
+++ b/WavesAndOscillations/wavesAndOscillation.html
@@ -66,7 +66,7 @@ const names = [
   "Simple Pendulum",
   "Young's Double Slit Experiment",
   "Double Pendulum",
-  "Spring Mass System"
+  "Spring Mass System",
 ]
 
 const myTable = document.getElementById("myTable");
