--- a/WavesAndOscillations/simulations/1.html
+++ b/WavesAndOscillations/simulations/1.html
@@ -52,6 +52,10 @@
             color: #a0aec0;
         }
     </style>
+     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
 </head>
 <body class="p-6 md:p-10 flex flex-col items-center justify-center min-h-screen">
     <div style="margin-bottom: 20px;" id="home">
