--- a/WavesAndOscillations/wavesAndOscillation.html
+++ b/WavesAndOscillations/wavesAndOscillation.html
@@ -46,6 +46,10 @@
   background-color: #f1f1f1;
 }
     </style>
+     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
 </head>
 <body>
   <div class="container">
