three body problem

--- a/Mechanics/mechanics.html
+++ b/Mechanics/mechanics.html
@@ -68,7 +68,8 @@
 <script>
 
 const names = [
-    "Water flow through 3 equally spaced hole in a container"
+    "Water flow through 3 equally spaced hole in a container",
+    "Three Body Problem"
 ]
 
 const myTable = document.getElementById("myTable");
