--- a/Mechanics/mechanics.html
+++ b/Mechanics/mechanics.html
@@ -69,7 +69,8 @@
 
 const names = [
     "Water flow through 3 equally spaced hole in a container",
-    "Three Body Problem"
+    "Three body problem",
+    "Frictional force on body placed on horizontal surface"
 ]
 
 const myTable = document.getElementById("myTable");
