--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <h3><a href="./ElectricityAndMagnetism/electricityAndMagnetism.html">Electricity and Magnetism</a></h3>
         <h3><a href="./Optics/optics.html">Optics</a></h3>
         <h3><a href="./ModernPhysics/modernPhysics.html">Modern Physics</a></h3>
+        <h2><a href="./Irodov/irodov.html"><em>Irodov</em></a></h2>
+
     </div>
+
 
 <script src="script.js"></script>
 </body>
