--- a/Irodov/simulations/7.html
+++ b/Irodov/simulations/7.html
@@ -59,7 +59,26 @@
         <div class="mb-8">
             <h2 class="text-xl font-semibold text-gray-700 mb-2">Step-by-Step Breakdown</h2>
             <div id="solutionSteps" class="text-gray-600">
-                <!-- Solution steps will be rendered here by JavaScript -->
+                <div class="mb-4">
+                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 1: Analyze the First Swimmer's Motion</h3>
+                        <p class="text-gray-600 mb-2">The first swimmer's resultant velocity, $\vec{v}_1$, is perpendicular to the stream. The velocities form a right-angled triangle, allowing us to use the Pythagorean theorem to find the magnitude of $v_1$.</p>
+                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$v_1 = \sqrt{(2.5)^2 - (2.0)^2} = 1.5 \text{ kmh}^{-1}$</p>
+                        <p class="text-gray-600">The time taken to cross the river of width $d$ is $t_1 = \frac{d}{1.5}$.</p>
+                    </div>
+                    <div class="mb-4">
+                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 2: Analyze the Second Swimmer's Motion</h3>
+                        <p class="text-gray-600 mb-2">This swimmer swims perpendicular to the stream but is carried downstream by the current. The time to swim across the river is:</p>
+                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$t_{\text{swim}} = \frac{d}{2.5}$</p>
+                        <p class="text-gray-600">The distance they are carried downstream is $x = v_0 \cdot t_{\text{swim}} = 2.0 \cdot \frac{d}{2.5} = 0.8d$. The time to walk this distance at velocity $u$ is $t_{\text{walk}} = \frac{0.8d}{u}$.</p>
+                        <p class="text-gray-600">Total time for the second swimmer: $t_2 = t_{\text{swim}} + t_{\text{walk}} = \frac{d}{2.5} + \frac{0.8d}{u}$.</p>
+                    </div>
+                    <div class="mb-4">
+                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 3: Equate Times and Solve for $u$</h3>
+                        <p class="text-gray-600 mb-2">Since both swimmers arrive at the same time, we set $t_1 = t_2$ and solve for $u$.</p>
+                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$\frac{d}{1.5} = \frac{d}{2.5} + \frac{0.8d}{u}$</p>
+                        <p class="text-gray-600 mb-2">Dividing by $d$ and solving for $u$ gives:</p>
+                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$u = 0.8 \left( \frac{1}{1.5} - \frac{1}{2.5} \right)^{-1} = 3.0 \text{ kmh}^{-1}$</p>
+                    </div>
             </div>
         </div>
     </div>
@@ -225,35 +244,6 @@
             
             // Initial draw
             draw();
-
-            // --- Render Solution Text ---
-            function renderSolutionText() {
-                const solutionHtml = `
-                    <div class="mb-4">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 1: Analyze the First Swimmer's Motion</h3>
-                        <p class="text-gray-600 mb-2">The first swimmer's resultant velocity, $\\vec{v}_1$, is perpendicular to the stream. The velocities form a right-angled triangle, allowing us to use the Pythagorean theorem to find the magnitude of $v_1$.</p>
-                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$v_1 = \\sqrt{(2.5)^2 - (2.0)^2} = 1.5 \\text{ kmh}^{-1}$</p>
-                        <p class="text-gray-600">The time taken to cross the river of width $d$ is $t_1 = \\frac{d}{1.5}$.</p>
-                    </div>
-                    <div class="mb-4">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 2: Analyze the Second Swimmer's Motion</h3>
-                        <p class="text-gray-600 mb-2">This swimmer swims perpendicular to the stream but is carried downstream by the current. The time to swim across the river is:</p>
-                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$t_{\\text{swim}} = \\frac{d}{2.5}$</p>
-                        <p class="text-gray-600">The distance they are carried downstream is $x = v_0 \\cdot t_{\\text{swim}} = 2.0 \\cdot \\frac{d}{2.5} = 0.8d$. The time to walk this distance at velocity $u$ is $t_{\\text{walk}} = \\frac{0.8d}{u}$.</p>
-                        <p class="text-gray-600">Total time for the second swimmer: $t_2 = t_{\\text{swim}} + t_{\\text{walk}} = \\frac{d}{2.5} + \\frac{0.8d}{u}$.</p>
-                    </div>
-                    <div class="mb-4">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-2">Step 3: Equate Times and Solve for $u$</h3>
-                        <p class="text-gray-600 mb-2">Since both swimmers arrive at the same time, we set $t_1 = t_2$ and solve for $u$.</p>
-                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$\\frac{d}{1.5} = \\frac{d}{2.5} + \\frac{0.8d}{u}$</p>
-                        <p class="text-gray-600 mb-2">Dividing by $d$ and solving for $u$ gives:</p>
-                        <p class="text-center text-lg font-mono text-gray-800 mb-4">$u = 0.8 \\left( \\frac{1}{1.5} - \\frac{1}{2.5} \\right)^{-1} = 3.0 \\text{ kmh}^{-1}$</p>
-                    </div>
-                `;
-                solutionSteps.innerHTML = solutionHtml;
-            }
-
-            renderSolutionText();
         };
     </script>
 </body>
