--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h3><a href="./Optics/optics.html">Optics</a></h3>
         <h3><a href="./ModernPhysics/modernPhysics.html">Modern Physics</a></h3>
         <h2><a href="./Irodov/irodov.html"><em>Irodov</em></a></h2>
+        <h2><a href="./IPhO/IPhO.html"><em>IPhO</em></a></h2>
 
     </div>
 
